// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders divider correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "center",
        "backgroundColor": "#ccc",
        "borderRadius": 2,
        "height": 4,
        "marginVertical": 16,
        "width": 120,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders divider correctly with optional style prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "center",
        "backgroundColor": "#ccc",
        "borderRadius": 2,
        "height": 4,
        "marginVertical": 16,
        "width": 120,
      },
      Object {
        "height": 4,
      },
    ]
  }
/>
`;
